--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"author": "",
 	"license": "MIT",
 	"scripts": {
-		"build": "rimraf dist && gulp",
+		"build": "rimraf dist && mkdir dist && gulp",
 		"prestart": "yarn install && yarn build",
 		"start": "http-server ./dist -p 80",
 		"start:dev": "http-server ./src -p 3000",
