--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"compile-sass": "sass --watch ./src/sass/style.scss ./src/css/style.css"
 	},
 	"dependencies": {
-		"http-server": "^0.12.3"
+		"firebase-admin": "^9.5.0",
+		"http-server": "^0.12.3",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"gulp": "^4.0.2",
