--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"firebase-admin": "^9.5.0",
 		"http-server": "^0.12.3",
+		"json2xls": "^0.1.2",
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
