--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"firebase-admin": "^9.5.0",
 		"http-server": "^0.12.3",
 		"json2xls": "^0.1.2",
+		"lodash": "^4.17.21",
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
